parte  do Marlon integrada - sistema de tags automáticas com base no títiulo do documento e pesquisa de documentos relacionados na web pelas tags.

--- a/Sabia/templates/relacionados.html
+++ b/Sabia/templates/relacionados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Artigos relacionados</title>
 </head>
 <body>
 {% load googlesearch_inclusion_tags %}
