--- a/Sabia/templates/footer.html
+++ b/Sabia/templates/footer.html
@@ -3,7 +3,7 @@
 	<div id="footer" class="container">
 	    <nav class="navbar navbar-inverse navbar-fixed-bottom">
 	        <div class="navbar-inner navbar-content-center">
-	            <p class="text-muted credit">Wander VInicius Bergami, mestrando UFES</p>
+	            <p class="text-muted credit">SABIA2 - Sistema de Apoio à Revisão Bibliográfica</p>
 	        </div>
 	    </nav>
 	</div>
