--- a/Sabia/templates/listar.html
+++ b/Sabia/templates/listar.html
@@ -3,12 +3,13 @@
 
 
 <style type="text/css">
-        .title { font-size: 1.4em; margin-top: 0; padding-left: 4px; }
-        .last { border: 0; }
-        .title a { text-decoration: none; }
-        td { border-bottom: 1px solid #ccc; }
-        #list { border: 1px solid #ccc; width: 700px; }
-    </style>
+     body{background-color: #fff;}
+    .title { font-size: 1.4em; margin-top: 0; padding-left: 4px; }
+    .last { border: 0; }
+    .title a { text-decoration: none; }
+    td { border-bottom: 1px solid #ccc; }
+    #list { border: 1px solid #ccc; width: 700px; }
+</style>
 
 <div class="page-header">
   <div class="container">
@@ -17,7 +18,7 @@
 </div>
 
 <div id="list">
-<table border="0" width="100%">
+<table border="5" width="100%">
     <tr>
         <td>Artigos</td>
         <td>Contexto</td>
