--- a/Sabia/templates/header.html
+++ b/Sabia/templates/header.html
@@ -29,8 +29,9 @@
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
           <ul class="nav navbar-nav">
-              <li class="active"><a href="/usuario">Usuários</a></li>
-              <li><a href="/documento">Documento</a></li>
+              <li class="active"><a href="/usuario">Contas de Usuário</a></li>
+              <li><a href="/documento">Envio de Artigos</a></li>
+              <li><a href="/listar">Listar artigos</a></li>
               <!--
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
