--- a/Sabia/templates/revisao.html
+++ b/Sabia/templates/revisao.html
@@ -11,27 +11,21 @@
     #list { border: 1px solid #ccc; width: 700px; }
 </style>
  <div class="main">
-<!-- Respostas  -->
+
 <div class="title">{{ titulo }}</div>
-    <textarea id="conteudo" name="conteudo">&lt;p&gt;{{ conteudo }}&lt;/p&gt;</textarea>
-    <script type="text/javascript">
-        CKEDITOR.replace( 'conteudo', {Toolbar: 'Full', height: 400});
-    </script>
-
+    {% autoescape off %}
+        {{ conteudo }}
+    {% endautoescape %}
 <div id="list">
-{% autoescape off %}
-  
-    {% for revisao in revisoes %}
-        <div class="post">
-            <hr>
-                revisão de {{ revisao.autor }} em <span class="date">{{ revisao.dtCriacao }}</span> <br /><br />
-                <a class="button" href={% url 'detalhe' revisao.pk %}>Ver</a>
 
+{% for revisao in revisoes %}
+    <div class="post">
+        <hr>
+            revisão de {{ revisao.autor }} em <span class="date">{{ revisao.dtCriacao }}</span> <br /><br />
+            <a class="button" href={% url 'detalhe' revisao.pk %}>Ver</a>
+    </div>
+{% endfor %}
 
-        </div>
-    {% endfor %}
-
-{% endautoescape %}
     <a class="button" href={% url 'postar' 'revisar' pk %}>Nova Revisão</a>
 
 </div>
