--- a/Sabia/templates/revisao.html
+++ b/Sabia/templates/revisao.html
@@ -27,5 +27,6 @@
 {% endfor %}
 
     <a class="button" href={% url 'postar' 'revisar' pk %}>Nova Revisão</a>
+    <a class="button" href={% url 'relacionados' %}>Relacionados</a>
 
 </div>
