sistema de recomendação 100%

--- a/Sabia/templates/index.html
+++ b/Sabia/templates/index.html
@@ -1,5 +1,20 @@
 <!-- Adiciona o topo-->
-{% load staticfiles %}
-{% include "header.html "%}
+{% load bootstrap3 %}
 
-{% include "footer.html "%}
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
+{# Display a form #}
+<form action="/listar" method="post" class="form">
+  {% csrf_token %}
+  {% bootstrap_form form %}
+  {% buttons %}
+    <button type="submit" class="btn btn-primary">
+      {% bootstrap_icon "star" %} Submit
+    </button>
+  {% endbuttons %}
+</form>
