--- a/Sabia/templates/relacionados.html
+++ b/Sabia/templates/relacionados.html
@@ -11,19 +11,19 @@
     <h2>Artigos Relacionados</h2>
   </div>
 </div>
-
-<script>
-  (function() {
-    var cx = '010213211375867678748:7karan2hhnq';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:searchresults-only></gcse:searchresults-only>
-
+<div class="container">
+  <script>
+    (function() {
+      var cx = '010213211375867678748:7karan2hhnq';
+      var gcse = document.createElement('script');
+      gcse.type = 'text/javascript';
+      gcse.async = true;
+      gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+          '//www.google.com/cse/cse.js?cx=' + cx;
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(gcse, s);
+    })();
+  </script>
+  <gcse:searchresults-only></gcse:searchresults-only>
+</container>
 {% include "footer.html" %}
