--- a/Sabia/templates/detalhe.html
+++ b/Sabia/templates/detalhe.html
@@ -1,15 +1,30 @@
 {% load staticfiles %}
 {%include "header.html" %}
+
+
+
 <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
 
-<textarea id="revisao" name="revisao">&lt;p&gt;{{ revisao }}&lt;/p&gt;</textarea>
-    <script type="text/javascript">
-        CKEDITOR.replace( 'revisao', {Toolbar: 'Full', height: 460, width: 1360});
-    </script>
- <div class="main">
-<!-- Respostas  -->
-<div class="title"></div>
-<script>
-    document.write('<a href="' + document.referrer + '">Voltar</a>');
-</script>
+
+<div class="page-header">
+  <div class="container">
+    <h2>Detalhes Revisão</h2>
+  </div>
+</div>
+<div class="container">
+	<textarea id="revisao" name="revisao">&lt;p&gt;{{ revisao }}&lt;/p&gt;</textarea>
+	    <script type="text/javascript">
+	        CKEDITOR.replace( 'revisao', {Toolbar: 'Full', height: 460, width: 1360});
+	    </script>
+	 <div class="main">
+	
+	<!-- Respostas  -->
+	
+	<div class="title"></div>
+		<script>
+		    document.write('<a href="' + document.referrer + '">Voltar</a>');
+		</script>
+		
+	</div>
+</div>
 {%include "footer.html" %}
