--- a/Sabia/templates/revisao.html
+++ b/Sabia/templates/revisao.html
@@ -1,35 +1,62 @@
 {% load staticfiles %}
 {%include "header.html" %}
-<script src="{% static 'ckeditor/ckeditor.js' %}"></script>
 
 <style type="text/css">
-   .main { margin-left: 25px; margin-top: 30px; width: 700px; }
-   .title { font-size: 1.4em; margin-top: 0px; padding-left: 4px; }
-   .title a { text-decoration: none; }
-   .button { background: #999; color: white; padding: 4px; text-decoration: none; }
-    td { border-bottom: 1px solid #ccc; }
-    #list { border: 1px solid #ccc; width: 700px; }
+     body{background-color: #fff;}    
 </style>
- <div class="main">
 
-<div class="title">{{ titulo }}</div>
-    {% autoescape off %}
-        {{ conteudo }}
-    {% endautoescape %}
-<div id="list">
+<div class="page-header">
+  <div class="container">
+    <h2>Listar documentos</h2>
+  </div>
+</div>
 
-{% for revisao in revisoes %}
-    <div class="post">
-        <hr>
-            revisão de {{ revisao.autor }} em <span class="date">{{ revisao.dtCriacao }}</span> <br /><br />
-            <a class="button" href={% url 'detalhe' revisao.pk %}>Ver</a>
+
+<div class="container">
+  <!-- Table -->
+  <table class="table">
+    <thead>
+        <tr>
+            <th><h3>{{ titulo }}</h3></th>                
+        </tr>
+    </thead>    
+    <tbody>
+        {% autoescape off %}
+          {{ conteudo }}
+        {% endautoescape %}
+    </tbody>
+  </table>
+
+  {% for revisao in revisoes %}        
+  <div class="bs-callout bs-callout-info">
+    <blockquote>
+      <p>
+        <strong><span class="glyphicon glyphicon-paperclip"></span> Revisado por {{ revisao.autor }}</strong>
+      </p>
+      <foster>
+        <span class="date">{{ revisao.dtCriacao }}</span>
+        <h4><a href={% url 'detalhe' revisao.pk %}>Visualizar Revisão</a></h4>
+      </foster>
+
+    </blockquote>
+  
+       
+  </div><br/>
+  {% endfor %}  
+
+  <!-- Button -->
+  <form action="/relacionados" method="get">
+    <div class="row">   
+      <div class='col-sm-8'>      
+          <div class="form-group">      
+            <a class="btn btn-success btn-xs" href={% url 'postar' 'revisar' pk %}>Nova Revisão</a>            
+            <button id="salvar" type="submit"  name="salvar" class="btn btn-danger btn-xs cancelar-resumo">Artigos Relacionado</button>
+            <input type="hidden" name="q" value={{ pesquisa }}>                    
+        </div>            
+      </div>
     </div>
-{% endfor %}
-
-    <a class="button" href={% url 'postar' 'revisar' pk %}>Nova Revisão</a>
-    <form action="/relacionados" method="get">
-        <input type="hidden" name="q" value={{ pesquisa }}>
-        <input type="submit" value="Artigos Relacionados">
-    </form>
+  </form>
+     
 
 </div>
+
